--- a/package.json
+++ b/package.json
@@ -5,17 +5,24 @@
     "scripts": {
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
-        "dev": "vite"
+        "dev": "vite",
+        "types": "tsc --noEmit"
     },
     "dependencies": {
         "@inertiajs/react": "^2.0.12",
         "@tailwindcss/vite": "^4.0.0",
+        "@types/react": "^19.1.8",
+        "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.5.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "tailwindcss": "^4.0.0",
+        "typescript": "^5.8.3",
         "vite": "^6.2.4"
+    },
+    "devDependencies": {
+        "@types/node": "^24.0.1"
     }
 }
