--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
         "dev": "vite",
+        "format": "prettier --write resources/",
+        "format:check": "prettier --check resources/",
+        "lint": "eslint . --fix",
         "types": "tsc --noEmit"
     },
     "dependencies": {
@@ -14,15 +17,27 @@
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.5.2",
+        "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "globals": "^16.2.0",
         "laravel-vite-plugin": "^1.2.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.8.3",
         "vite": "^6.2.4"
     },
     "devDependencies": {
-        "@types/node": "^24.0.1"
+        "@eslint/js": "^9.29.0",
+        "@types/node": "^24.0.1",
+        "eslint": "^9.29.0",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "prettier": "^3.5.3",
+        "prettier-plugin-organize-imports": "^4.1.0",
+        "prettier-plugin-tailwindcss": "^0.6.12",
+        "typescript-eslint": "^8.34.0"
     }
 }
