--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "types": "tsc --noEmit"
     },
     "dependencies": {
+        "@headlessui/react": "^2.2.4",
         "@inertiajs/react": "^2.0.12",
         "@tailwindcss/vite": "^4.0.0",
         "@types/react": "^19.1.8",
