--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "daisyui": "^5.0.43",
         "globals": "^16.2.0",
         "laravel-vite-plugin": "^1.2.0",
+        "lucide-react": "^0.525.0",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "tailwind-merge": "^3.3.1",
