--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "globals": "^16.2.0",
         "laravel-vite-plugin": "^1.2.0",
         "lucide-react": "^0.525.0",
+        "moment": "^2.30.1",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "tailwind-merge": "^3.3.1",
